--- a/style.css
+++ b/style.css
@@ -19,9 +19,10 @@ body {
   /* Only color values written so that I can control rgba 'alpha' liberally */
   --background-color: 105, 25, 255;
   --navbar-color: 21, 20, 26;
-  --text-color-white: #fff;
+  --text-color-white: 255, 255, 255;
   --text-color-grey: 255, 254, 250;
   --text-color-dark: 15, 25, 34;
+  --text-color-dark-grey: 31, 39, 49;
 
   --navbar-padding: 2rem 0;
   --main-padding-1: 0 10rem;
@@ -29,7 +30,7 @@ body {
   --main-padding-3: 0 4rem;
   --nav-text-link-padding: 0 2rem 0 0;
 
-  --section-header-font-size: 2.5rem;
+  --section-header-font-size: 3rem;
   --font-size-1: 1.7rem;
   --font-size-2: 1.5rem;
   --font-size-3: 1.2rem;
@@ -46,7 +47,7 @@ body {
 }
 
 .wrapper {
-  color: var(--text-color-white);
+  color: rgb(var(--text-color-white));
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
@@ -71,7 +72,7 @@ body {
 /* Navbar */
 
 a {
-  color: var(--text-color-white);
+  color: rgb(var(--text-color-white));
 }
 
 .header {
@@ -172,7 +173,7 @@ a {
   font-weight: 700;
   text-align: center;
   font-size: var(--font-size-1);
-  outline: 2px solid var(--text-color-white);
+  border: 2px solid rgb(var(--text-color-white));
   max-width: 12em;
   transition: all 500ms var(--cubic-bezier-1);
   position: relative;
@@ -190,7 +191,7 @@ a {
   left: 0;
   content: "";
   height: 100%;
-  background-color: var(--text-color-white);
+  background-color: rgb(var(--text-color-white));
 }
 
 .buttons:hover::before {
@@ -239,7 +240,7 @@ a {
   background-color: rgb(var(--text-color-dark));
 }
 
-.about-me-subsection h2 {
+.section-title {
   font-size: var(--section-header-font-size);
 }
 
@@ -250,7 +251,7 @@ a {
 }
 
 .paragraph {
-  font-size: var(--font-size-1);
+  font-size: var(--font-size-2);
   color: rgba(var(--text-color-grey), 0.6);
   line-height: 1.7;
 }
@@ -261,7 +262,7 @@ a {
   position: relative;
   height: 100vh;
   width: 100%;
-  background-color: var(--text-color-white);
+  background-color: rgb(var(--text-color-white));
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -272,7 +273,6 @@ a {
 
 .my-work-section > h2 {
   margin-top: 8rem;
-  font-size: var(--section-header-font-size);
 }
 
 .my-work-section > p {
@@ -307,7 +307,6 @@ a {
   font-size: 5rem;
   z-index: 100;
   background-color: transparent;
-
   border: none;
 }
 
@@ -422,7 +421,7 @@ a {
   color: rgba(var(--text-color-grey), 0.5);
   font-size: var(--font-size-2);
   padding: 0.5em 1em;
-  border: 2px solid rgba(var(--text-color-grey), 0.5);
+  border: 2px solid rgba(var(--text-color-grey));
   border-radius: 0.5rem;
   margin-right: 0.5rem;
   position: relative;
@@ -454,7 +453,7 @@ a {
   position: relative;
   height: 100vh;
   width: 100%;
-  background-color: var(--text-color-white);
+  background-color: rgb(var(--text-color-white));
   color: rgb(var(--text-color-dark));
   display: flex;
   flex-direction: column;
@@ -465,6 +464,14 @@ a {
 .tech-header {
   font-size: var(--section-header-font-size);
   margin: 10rem 0 5rem 0;
+  display: flex;
+  align-items: baseline;
+}
+
+.tech-header > span {
+  font-size: var(--font-size-3);
+  margin-left: 0.7rem;
+  font-style: italic;
 }
 
 .tech-icons-gallery {
@@ -475,36 +482,163 @@ a {
 
 .tech-icon {
   width: clamp(10rem, 11vw, 23rem);
-  height: clamp(12rem, 10vw, 23rem);;
+  height: clamp(12rem, 10vw, 23rem);
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 0 2rem 1rem 1rem;
   box-shadow: 3px 3px 5px rgba(59, 135, 202, 0.4),
     5px 5px 15px rgba(var(--background-color), 0.3);
-    border-radius: .5rem;
+  border-radius: 0.5rem;
+  transition: all 300ms ease-out;
+}
+
+.tech-icon:hover {
+  transform: scale(1.1);
 }
 
 .tech-icon img {
   width: 90%;
   height: 90%;
   object-fit: contain;
+  transition: all 300ms ease-out;
+}
+
+.tech-icon:hover > img {
+  transform: scale(0.8);
 }
 
 /* Contact me section */
 
 .contact-me-section {
   position: relative;
+  z-index: 0;
   height: 100vh;
   width: 100%;
-  background-color: blue;
+  background-color: rgb(var(--text-color-dark));
+  display: flex;
+  align-items: center;
+  padding: var(--main-padding-2);
 }
+
+.contact-final-word {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 2rem;
+  align-items: center;
+}
+
+.contact-image-container {
+  width: 15vw;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.contact-image-container img {
+  object-fit: cover;
+  width: 100%;
+}
+
+.contact-info-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.contact-info-list > * {
+  font-size: var(--font-size-2);
+  line-height: 2;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  font-size: var(--font-size-3);
+}
+
+.contact-info-list img {
+  width: 1.8rem;
+  height: 1.8rem;
+}
+
+.form-container {
+  width: 100%;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  text-transform: uppercase;
+}
+
+.contact-labels {
+  margin: 2rem 0 0.5rem 0;
+  font-size: var(--font-size-2);
+}
+
+.contact-inputs {
+  height: 3rem;
+}
+
+.contact-text {
+  height: 25rem;
+  resize: none;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-text-fill-color: rgb(var(--text-color-white));
+  -webkit-box-shadow: 0 0 0px 1000px rgb(var(--text-color-dark-grey)) inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
+.contact-inputs,
+.contact-text {
+  background-color: rgb(var(--text-color-dark-grey));
+  border-color: transparent;
+  border-radius: 0.5rem;
+  color: rgb(var(--text-color-white));
+  padding: .5rem;
+}
+
+.contact-inputs:focus,
+.contact-text:focus {
+  outline: 1px solid rgb(var(--background-color));
+}
+
+.contact-inputs:focus:invalid,
+.contact-text:focus:invalid {
+  outline: 1px solid red;
+}
+
+.contact-btn {
+  background-color: transparent;
+  padding: 0.6em;
+  margin-top: 1.5rem;
+  border-radius: 0.5rem;
+  color: inherit;
+  font-weight: 700;
+  text-align: center;
+  font-size: var(--font-size-2);
+  border: 2px solid rgb(var(--text-color-white));
+  max-width: 8em;
+  transition: all 500ms var(--cubic-bezier-1);
+  position: relative;
+}
+
+/* Footer section */
 
 .footer-section {
   position: relative;
   height: 6rem;
   width: 100%;
-  background-color: rgb(var(--text-color-dark));
   display: flex;
   justify-content: center;
   align-items: center;
